--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #7d947a;
+  background-image: url(assets/images/matrix.jpg);
 }
 
 .wrapper {
@@ -27,22 +27,26 @@ header {
   text-align: center;
   padding: 20px;
   padding-top: 0px;
-  color: rgb(56, 83, 49);
+  color: #008F11;
   font-size: 24px;
 }
 h1 {
   display: inline-block;
+  background-color: black;
+  padding: 0.5%;
+  border-radius: 2em / 5em;
+
 }
 header h1:hover {
-  text-shadow: 1px 1px 6px greenyellow;
+  text-shadow:  1px 1px 2px #000000, 1px 1px 3px #00FF41;
 }
 
 .card {
-  background-color: #a1bd9d;
-  border-radius: 5px;
-  border: 1px solid greenyellow;
-  box-shadow: 1px 1px 6px greenyellow;
-  color: rgb(56, 83, 49);
+  background-color: #0a0c0b;
+  border-radius: 2em / 0.5em;
+  border: 1px solid #00FF41;
+  box-shadow: 1px 1px 6px #00FF41;
+  color: #008F11;
   font-size: 18px;
   margin: 0 auto;
   max-width: 800px;
@@ -63,9 +67,17 @@ header h1:hover {
 .card-body {
   min-height: 100px;
 }
-
 .card-footer {
   text-align: center;
+}
+.card-footer p {
+  padding: none;
+  margin: none;
+  font-size: 8px;
+  letter-spacing: 5px;
+}
+.card-footer p:hover {
+ text-decoration: underline overline;
 }
 
 .card-footer::before {
@@ -84,11 +96,9 @@ header h1:hover {
 
 .btn {
   border: none;
-  background-color: rgb(56, 83, 49);
+  background-color: #003B00;
   border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-    0px;
-  color: greenyellow;
+  color: #00FF41;
   display: inline-block;
   font-size: 22px;
   line-height: 22px;
@@ -98,7 +108,7 @@ header h1:hover {
   cursor: pointer;
 }
 .card-footer button:hover {
-  box-shadow: 2px 2px 10px greenyellow;
+  box-shadow: 2px 2px 1px #000000, 1px 1px 4px #00FF41;
 }
 
 button[disabled] {
@@ -131,7 +141,8 @@ button[disabled] {
   overflow: hidden;
 }
 #password:hover {
-  border: 2px solid greenyellow;
+  border: 2px solid #00FF41;
+  box-shadow: 0.25px 0.25px 4px #00FF41;
 }
 
 @media (max-width: 690px) {
