--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@ header h1:hover {
   letter-spacing: 5px;
 }
 .card-footer p:hover {
- text-decoration: underline overline;
  cursor: none;
 }
 
@@ -96,9 +95,8 @@ header h1:hover {
 }
 
 .btn {
-  border: none;
+  border: 0.5px solid black;
   background-color: #003B00;
-  border-radius: 25px;
   color: #00FF41;
   display: inline-block;
   font-size: 22px;
@@ -109,7 +107,7 @@ header h1:hover {
   cursor: pointer;
 }
 .card-footer button:hover {
-  box-shadow: 2px 2px 1px #000000, 1px 1px 4px #00FF41;
+  border: 0.5px solid #00FF41;
 }
 
 button[disabled] {
@@ -140,6 +138,7 @@ button[disabled] {
   border-radius: 6px;
   resize: none;
   overflow: hidden;
+  background-color: #afb5bd
 }
 #password:hover {
   border: 2px solid #00FF41;
