--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header h1:hover {
   margin: 0 auto;
   max-width: 800px;
   padding: 30px 40px;
-  animation: glow 1300ms infinite;
+  animation: glow 2300ms infinite;
 }
 
 .card-header::after {
@@ -108,6 +108,7 @@ header h1:hover {
   padding: 14px 34px;
   text-align: center;
   cursor: pointer;
+  box-shadow: 0.25px 0.25px 20px #00FF41;
 }
 .card-footer button:hover {
   border: 0.5px solid #00FF41;
